adding jQuery as a dev dependency

--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,8 @@
     ],
     "dependencies": {
         "backbone": "~1.1.2"
+    },
+    "devDependencies": {
+        "jquery": "~2.1.3"
     }
 }
