renaming plugin: modelEvents --> dataEvents

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "backbone.modelEvents",
+    "name": "backbone.dataEvents",
     "version": "0.0.0",
     "homepage": "https://github.com/morficus/cordova-2.1.0_requirejs-2.0.6",
     "authors": [
