updating package.json and bower.json with repo info

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Maurice Williams <morficus@gmail.com>",
-    "license": "MIT"
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/morficus/backbone.dataEvents.git"
+    }
 }
