--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "backbone.dataEvents",
     "version": "0.0.0",
-    "homepage": "https://github.com/morficus/cordova-2.1.0_requirejs-2.0.6",
+    "homepage": "https://github.com/morficus/backbone.dataEvents",
     "authors": [
         "Maurice Williams <morficus@gmail.com>"
     ],
