--- a/package.json
+++ b/package.json
@@ -16,15 +16,13 @@
         "url": "https://github.com/morficus/backbone.dataEvents.git"
     },
     "devDependencies": {
-        "blanket": "^1.1.6",
-        "chai": "^1.10.0",
         "grunt": "^0.4.5",
         "grunt-cli": "^0.1.13",
         "grunt-contrib-clean": "^0.6.0",
         "grunt-contrib-copy": "^0.7.0",
+        "grunt-contrib-jasmine": "^0.8.1",
         "grunt-contrib-jshint": "^0.10.0",
         "grunt-contrib-uglify": "^0.7.0",
-        "matchdep": "^0.3.0",
-        "mocha": "^2.1.0"
+        "matchdep": "^0.3.0"
     }
 }
