--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "tests"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "./node_modules/.bin/grunt validate"
     },
     "author": "Maurice Williams <morficus@gmail.com>",
     "license": "MIT",
