more release prep: 	- adding more "keywords" to bower.json and package.son 	- adding a post-install npm step for install bower dependencies

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,10 @@
         "backbone",
         "backbone.collection",
         "backbone.model",
-        "events"
+        "events",
+        "modelEvents",
+        "collectionEvents",
+        "dataEvents"
     ],
     "license": "MIT",
     "ignore": [
