--- a/package.json
+++ b/package.json
@@ -7,8 +7,18 @@
         "test": "tests"
     },
     "scripts": {
+        "postinstall": "./node_modules/bower/bin/bower install",
         "test": "./node_modules/.bin/grunt validate"
     },
+    "keywords": [
+        "backbone",
+        "backbone.collection",
+        "backbone.model",
+        "events",
+        "modelEvents",
+        "collectionEvents",
+        "dataEvents"
+    ],
     "author": "Maurice Williams <morficus@gmail.com>",
     "license": "MIT",
     "repository": {
@@ -16,6 +26,7 @@
         "url": "https://github.com/morficus/backbone.dataEvents.git"
     },
     "devDependencies": {
+        "bower": "^1.3.12",
         "grunt": "^0.4.5",
         "grunt-cli": "^0.1.13",
         "grunt-contrib-clean": "^0.6.0",
